deployment-example.yaml
# kubectl create deployment my-app --image deni02/myapp:v1.0 --replicas=2 \
# -n dev --dry-run=client -o yaml > my-app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-app
  name: my-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: deni02/myapp:v1.0
        name: myapp
