pod-example1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: dev
  name: pod-example1
  namespace: dev
spec:
  containers:
  - env:
    - name: HOST
      value: 1.1.1.1
    image: nginx
    name: pod-example1
    ports:
      - containerPort: 80
