pod-example2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: prod
  name: pod-example2
  namespace: prod
spec:
  containers:
  - image: nginx
    name: pod-example2
    ports:
      - containerPort: 80
