pod-nodename.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-nodename
  name: pod-nodename
  namespace: prod
spec:
  # nodeName: kube-worker-02
  containers:
  - image: nginx
    name: pod-nodename
  nodeSelector:
    disk: ssd
