pod-on-spesific-selector-example.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-nodename
  name: pod-nodename
  namespace: prod
spec:
  containers:
  - image: nginx
    name: pod-nodename
  nodeSelector:
    disk: ssd
