pod-static.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    env: staging
  name: pod-static
spec:
  containers:
  - image: nginx
    name: pod-static
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
