ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - domainku.com
    secretName: ssl-domainku
  rules:
  - host: domainku.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pod-app1
            port:
              number: 80
      - pathType: Prefix
        path: "/apps"
        backend:
          service:
            name: pod-app2
            port:
              number: 80
