np-sandbox.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sandbox-netpol
  namespace: sandbox
spec:
  podSelector:
    matchLabels:
      env: sandbox
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: staging
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: staging
    ports:
    - protocol: TCP
      port: 80
    - protocol: UDP
      port: 80
